# the-forge-macro

./: Cargo.toml  README.md  build.rs  settings.json
src/: bot_data.rs  config.rs  macro_forge.rs  main.rs  switch_ui.rs
