[package]
name = "TFM"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3" #Biblioteka do GUI
enigo = "0.6.1" #Klikanie
rand = "0.9.2" #Losowość
active-win-pos-rs = "0.9.1" #Aktywne okno
image = { version = "0.25", default-features = false, features = ["png"] } #Wczytywanie png
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"

[build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"